--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build && next export",
     "start": "next start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "deploy": "gh-pages -d out",
+    "export": "next export"
   }
   ,
   "dependencies": {
