--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
   "devDependencies": {
     "eslint": "latest",
     "eslint-config-next": "latest",
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "tailwindcss": "^3.4.14",
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.20",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/line-clamp": "^0.4.4"
   }
 }
